share/remf-create-env-terraform/remf/k8s/helm/argocd/ingress_argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argcd-argo-cd-server
  namespace: argocd-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.remf.net.br`)
      priority: 10
      services:
        - name: argcd-argo-cd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.remf.net.br`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argcd-argo-cd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: aws
